--- a/Fronted/quasar-project/src/css/app.scss
+++ b/Fronted/quasar-project/src/css/app.scss
@@ -1,1 +1,9 @@
 // app global css in SCSS form
+
+
+body{
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+}
