--- a/Fronted/quasar-project/src/css/quasar.variables.scss
+++ b/Fronted/quasar-project/src/css/quasar.variables.scss
@@ -12,11 +12,11 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #6d16c4;
-$secondary : #32dbca;
-$accent    : #9C27B0;
+$primary   : #953cee;
+$secondary : #3aecdb;
+$accent    : #5900bed9;
 
-$dark      : #1D1D1D;
+$dark      : #000000;
 $dark-page : #121212;
 
 $positive  : #21BA45;
